plugins {
  id "com.jfrog.bintray" version "1.7"
}

ext {
  globalVersion = file('version.txt').text
}

group       = 'org.pageseeder.bridge'
version     = "$globalVersion"
description = "$title"

apply plugin: 'java'
apply plugin: 'maven-publish'
apply from: 'gradle/publishing.gradle'

sourceCompatibility = 1.8
targetCompatibility = 1.8

repositories {
  maven { url 'http://dl.bintray.com/pageseeder/maven' }
  jcenter()
}

dependencies {

  compile (
    'org.slf4j:slf4j-api:1.7.21',
    'org.pageseeder.xmlwriter:pso-xmlwriter:1.0.2',
    'net.sf.ehcache:ehcache:2.8.8',
    'javax.cache:cache-api:1.0.0',
  )

  compileOnly (
    'org.eclipse.jdt:org.eclipse.jdt.annotation:2.0.0'
  )

  testCompile (
    'junit:junit:4.12',
    'org.slf4j:slf4j-simple:1.7.21'
  )

}

subprojects {
  group   = 'org.pageseeder.bridge'
  version = "$globalVersion"

  apply plugin: 'java'

  sourceCompatibility = 1.8
  targetCompatibility = 1.8

  repositories {
    maven { url 'http://dl.bintray.com/pageseeder/maven' }
    jcenter()
  }
}

allprojects {
  jar {
    manifest {
      attributes 'Implementation-Vendor':  'Allette Systems',
                 'Implementation-Title':   "$title",
                 'Implementation-Version': "$globalVersion"
    }
  }
}

task publishAllToBintray(group: 'pageseeder') {
  allprojects.each {
    dependsOn("${it.path}:bintrayUpload" )
  }
}
